--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,12 @@
 
   <title>restaurant_waste_frontend</title>
   <link rel="manifest" href="manifest.json">
+
+  <script async
+  src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+  </script>
+
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
